Text z-index fix on habitual page on mobile

--- a/public/scss/style_project.scss
+++ b/public/scss/style_project.scss
@@ -145,7 +145,7 @@ header {
 }
 
 .onlymobile {
-    z-index: 5;
+    z-index: 50;
     width: 100%;
     position: sticky;
     top: 88px; //perfect!
